<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Songbook (Dev)</string>
    <string name="search">Search</string>
    <string name="we_need_this_permissions">We need this permissions!</string>
    <string name="You_need_to_wait_for_this_feature">You need to wait for this feature to load!</string>
    <string name="SearchInSongTextIsAvailable">Search in song text is available!</string>
    <string name="loading_and_downloading_songs_the_first_time_it_takes_some_time">Loading and downloading songs. The first time it takes some time.</string>
    <string name="skip">Skip</string>
    <string name="downloading_songs_selected_language">Downloading songs.  Selected language:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="language">Language</string>
    <string name="download_songs">Download songs</string>
    <string name="select_languages">Select song languages</string>
    <string name="select_at_least_one_language">Select at least one language</string>
    <string name="downloading_songs">Downloading songs.</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="select">Select</string>
    <string name="all_collections">ALL</string>
    <string name="none_collections">NONE</string>
    <string name="modified_date">Modified date</string>
    <string name="ascending_by_title">Ascending by title</string>
    <string name="descending_by_title">Descending by title</string>
    <string name="ascending_by_created_date">Ascending by created date</string>
    <string name="descending_by_created_date">Descending by created date</string>
    <string name="close">Close</string>
    <string name="downloaded">Downloaded</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light theme</string>
    <string name="maximum_size_of_text">Maximum size of text</string>
    <string name="collection">Collection</string>
    <string name="collections">Collections</string>
    <string name="saving_songs">Saving songs</string>
    <string name="downloading_collections">Downloading collections</string>
    <string name="saving_collections">Saving collections</string>
    <string name="completed">Completed</string>
    <string name="chorus">Chorus</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="downloading_progress_not_completed">Downloading progress not completed.  Press again to go back.</string>
    <string name="press_twice">Press twice to go to the first verse!</string>
    <string name="show_title_as_first_verse">Show title as first verse</string>
    <string name="blank_at_end_of_song">Blank after the last verse</string>
    <string name="advanced_options">Advanced options</string>
    <string name="share_on_network">Share on network</string>
    <string name="no_connections">There is no shared connections!</string>
    <string name="select_one_below">Select one below:</string>
    <string name="connect_to_shared">Connect to shared</string>
    <string name="connection_successfully_wait_">Connection successfully!  Wait for incoming texts.</string>
    <string name="similar">Similar</string>
    <string name="new_song">New song</string>
    <string name="no_title">No title</string>
    <string name="empty_verses">Empty verses</string>
    <string name="title_of_the_song">Title of the song</string>
    <string name="verses">Verses:</string>
    <string name="insert_here_the_song_verses_nseparated_by_an_empty_line_n_n1_example_n_n2_example">Insert here the song verses\nseparated by an empty line.\n\n  1. Example\n\n  2. Example</string>
    <string name="your_email">Your email:</string>
    <string name="languageD">Language:</string>
    <string name="title">Title</string>
    <string name="language_of_the_song">Language of the song</string>
    <string name="successfully_uploaded">Successfully uploaded!</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_needs_sign_in_message">Sign in to upload songs to the server.</string>
    <string name="upload_session_expired_message">Your session expired. Sign in again, then try uploading.</string>
    <string name="upload_open_login">Sign in</string>
    <string name="upload_network_or_server_message">Could not upload. Check your connection and try again.</string>
    <string name="suggest_edits">Suggest edits</string>
    <string name="short_description_of_the_suggestion">Short description of the suggestion:</string>
    <string name="submit">Submit</string>
    <string name="other">Other</string>
    <string name="edit">Edit</string>
    <string name="no_description">No description!</string>
    <string name="by_title">By title</string>
    <string name="by_created_date">By created date</string>
    <string name="by_collection">By collection</string>
    <string name="reverse">Reverse</string>
    <string name="short_collection_name">Short collection name</string>
    <string name="no_change">No change</string>
    <string name="versions">Versions</string>
    <string name="linking_to_another_version">Linking to another version</string>
    <string name="link_with_this_song">Link with this song</string>
    <string name="sync_automatically">Sync automatically</string>
    <string name="too_short_text">Too short text!</string>
    <string name="this_song_is_not_saved">This song is not saved</string>
    <string name="description">Description</string>
    <string name="youtube_video">Youtube video</string>
    <string name="Cannot_parse_YouTube_Url">Cannot parse YouTube Url</string>
    <string name="youtube_url" translatable="false">YouTube url</string>
    <string name="insert_the_youtube_url_here">Insert the YouTube URL here</string>
    <string name="select_youtube_video">Select a video, than: SHARE -> COPY LINK</string>
    <string name="attach_youtube_video">Attach YouTube video</string>
    <string name="containing_videos">Containing videos</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="favourite">Favourite</string>
    <string name="press_twice_to_exit">Press twice to exit</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign in</string>
    <string name="sync_in_google_drive">Sync in Google Drive</string>
    <string name="from_now_you_can_synchronize_your_favourite_songs_across_google_drive">From now you can synchronize your favourite songs across Google Drive.</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign out</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="clear_all">Clear all</string>
    <string name="drag">Drag</string>
    <string name="queue">Queue</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="no_shareable_songs_in_queue">No shareable songs in queue</string>
    <string name="search_in_verses">Search in verses</string>
    <string name="my_library">My library</string>
    <string name="song_lists">Song lists</string>
    <string name="new_song_list">New song list</string>
    <string name="save">Save</string>
    <string name="add_to_song_list">Add to song list</string>
    <string name="cancel">Cancel</string>
    <string name="required">Required</string>
    <string name="songs_added_to">songs added to</string>
    <string name="add_duplicate_songs">Add duplicate songs?</string>
    <string name="some_of_these_songs_are_already_in_this_song_list">Some of these songs are already in this song list.</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit_song_list">Edit song list</string>
    <string name="sensor_rotate_in_fullscreen">Rotate screen</string>
    <string name="probably_sign_in_not_works_on_your_device">Probably sign in not works on your device.</string>
    <string name="change_view">Change view</string>
    <string name="relevance">Relevance</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="try_again">Try again</string>
    <string name="letter_intro">I</string>
    <string name="letter_verse">V</string>
    <string name="letter_pre_chorus">PC</string>
    <string name="letter_chorus">C</string>
    <string name="letter_bridge">B</string>
    <string name="letter_coda">E</string>
    <string name="delete_song">Delete song</string>
    <string name="undo_deletion">Undo deletion</string>
    <string name="this_song_has_been_modified_please_update_your_songs_in_order_to_see_the_differences">This song has been modified, please update your songs in order to see the differences!</string>
    <string name="not_now">Not now</string>
    <string name="update_songs">Update songs</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="try_again_later">Try again later</string>
    <string name="password_or_email_incorrect">Password or email incorrect</string>
    <string name="create_account">Create account</string>
    <string name="delete_account">Delete account</string>
    <string name="upload_song">Upload song</string>
    <string name="Couldnt_get_selected_language">Couldn\'t get selected language!</string>
    <string name="Are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
</resources>
