<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.SongActivity">

    <item
        android:id="@+id/action_similar"
        android:icon="@drawable/ic_compare_black_24dp"
        android:orderInCategory="100"
        android:title="@string/similar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_youtube"
        android:icon="@drawable/ic_youtube"
        android:orderInCategory="5"
        android:title="@string/youtube_video"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:orderInCategory="7"
        android:title="@string/favourite"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_queue"
        android:icon="@drawable/ic_queue_black_24dp"
        android:orderInCategory="11"
        android:title="@string/add_to_queue"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_to_song_list"
        android:icon="@drawable/ic_playlist_add_black_24dp"
        android:orderInCategory="12"
        android:title="@string/add_to_song_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_forward_arrow"
        android:orderInCategory="14"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_suggest_edits"
        android:icon="@drawable/ic_rate_review_light"
        android:orderInCategory="20"
        android:title="@string/suggest_edits"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/delete_song"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:orderInCategory="100"
        android:title="@string/upload_song"
        app:showAsAction="ifRoom" />
</menu>