<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.LibraryActivity">

    <item
        android:id="@+id/action_add_to_queue"
        android:icon="@drawable/ic_queue_black_24dp"
        android:orderInCategory="10"
        android:title="@string/add_to_queue"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_forward_arrow"
        android:orderInCategory="12"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="15"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="16"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>