<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_song">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3">

            <TextView
                android:id="@+id/email_textView"
                android:layout_width="wrap_content"
                android:text="@string/your_email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="12"
                android:hint="example@host.com"
                android:inputType="textEmailAddress"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/languageD" />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="12"
                android:hint="@string/language_of_the_song" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/title"
                android:text="@string/title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="12"
                android:hint="@string/title_of_the_song"
                android:inputType="text|textCapSentences"
                android:maxLength="50" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:labelFor="@id/text"
            android:text="@string/verses" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="17dp"
            android:ems="12"
            android:hint="@string/insert_here_the_song_verses_nseparated_by_an_empty_line_n_n1_example_n_n2_example"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="12"
            android:maxLength="10000"
            android:padding="7dp" />
    </LinearLayout>
</ScrollView>
