<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bence.songbook.ui.activity.SuggestYouTubeActivity">

    <LinearLayout
        android:id="@+id/updateSongsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <Button
            android:id="@+id/backButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/close"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/suggestion"
            android:text="@string/youtube_url" />

        <EditText
            android:id="@+id/youtubeUrl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/insert_the_youtube_url_here"
            android:inputType="textNoSuggestions|textUri"
            android:maxLength="30"
            tools:ignore="Autofill" />

        <WebView
            android:id="@+id/youtube_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_of_the_song"
                android:inputType="text|textCapSentences"
                android:maxLength="50"
                tools:ignore="Autofill" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/verses" />

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="17dp"
            android:layout_weight="1"
            android:ems="12"
            android:hint="@string/insert_here_the_song_verses_nseparated_by_an_empty_line_n_n1_example_n_n2_example"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLength="10000"
            android:padding="7dp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add"
        android:tint="@color/primaryTextColor"
        app:backgroundTint="@color/primaryDarkColor"
        app:fabSize="auto"
        app:srcCompat="@drawable/ic_done_black_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
