<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bence.songbook.ui.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/lightThemeSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/light_theme"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:labelFor="@id/seekBar"
            android:text="@string/maximum_size_of_text"
            android:textSize="18sp"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="200"
            android:padding="15dp"
            android:progress="129"/>

        <Switch
            android:id="@+id/showTitleSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/show_title_as_first_verse"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Switch
            android:id="@+id/blankSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/blank_at_end_of_song"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Switch
            android:id="@+id/shortCollectionSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/short_collection_name"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Switch
            android:id="@+id/rotateInFullscreenSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/sensor_rotate_in_fullscreen"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:paddingTop="42dp"
            android:text="@string/advanced_options"
            android:textSize="20sp"/>

        <Switch
            android:id="@+id/shareOnNetworkSwitch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="start|center|end"
            android:padding="10dp"
            android:text="@string/share_on_network"
            android:textSize="13sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/connectToSharedButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="6dp"
            android:gravity="start|center|end"
            android:padding="5dp"
            android:text="@string/connect_to_shared"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>
