<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context="com.bence.songbook.ui.activity.LanguagesActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/sync_automatically" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/select_languages"
        android:textSize="20sp" />

    <Button
        android:id="@+id/languageActivity_downloadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/download_songs" />

    <ListView
        android:id="@+id/languageActivity_listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>